--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+server.port=80
 
+spring.datasource.username=root
+spring.datasource.password=mysqlmima123
+spring.datasource.url=jdbc:mysql://localhost:3306/short-url?&serverTimezone=Asia/Shanghai
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
