--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 server.port=80
 
 spring.datasource.username=root
-spring.datasource.password=mysqlmima123
+#spring.datasource.password=mysqlmima123
+spring.datasource.password=051a550e5050ge3sg025
+
 spring.datasource.url=jdbc:mysql://localhost:3306/short-url?&serverTimezone=Asia/Shanghai
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
