--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.password=mysqlmima123
 
 spring.datasource.url=jdbc:mysql://localhost:3306/short-url?&serverTimezone=Asia/Shanghai
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.redis.host=localhost
+spring.redis.port=6379
