Redis改造完成，下一个是id

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -13,3 +13,5 @@ spring.redis.password=2n5wrAnBW8IOrSYx
 server.ssl.key-store=classpath:a4.fit.jks
 server.ssl.key-store-password=
 server.ssl.key-store-type=JKS
+
+baseUrl=https://a4.fit/
