--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=80
+server.port=5027
 
 spring.datasource.username=root
 spring.datasource.password=mysqlmima123
@@ -9,3 +9,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.redis.host=localhost
 spring.redis.port=6379
+
+baseUrl=http://localhost:5027/
