--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -10,8 +10,8 @@ spring.redis.host=10.3.0.4
 spring.redis.port=6379
 spring.redis.password=2n5wrAnBW8IOrSYx
 
-server.ssl.key-store=classpath:itube.work.jks
-server.ssl.key-store-password=s9gm6ahr7olp8b
+server.ssl.key-store=classpath:SHA256withRSA_a4.fit.jks
+server.ssl.key-store-password=1234
 server.ssl.key-store-type=JKS
 
-baseUrl=https://itube.work/
+baseUrl=https://a4.fit/
