加入秘钥计划

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,7 @@
 server.port=443
 
+spring.profile.active=prod
+
 spring.datasource.username=short_url
 spring.datasource.password=QEN6p73b8NkPUv3E
 
