--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 server.port=5028
 
+spring.profile.active=dev
+
 spring.datasource.username=root
 spring.datasource.password=mysqlmima123
 #spring.datasource.password=051a550e5050ge3sg025
