--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -10,10 +10,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.redis.host=10.3.0.4
 spring.redis.port=6379
-spring.redis.password=2n5wrAnBW8IOrSYx
+spring.redis.password=
 
-server.ssl.key-store=classpath:SHA256withRSA_a4.fit.jks
-server.ssl.key-store-password=1234
+server.ssl.key-store=classpath:9583256_a4.fit.jks
+server.ssl.key-store-password=
 server.ssl.key-store-type=JKS
 
 baseUrl=https://a4.fit/
